Doc: Working on introduction and model

--- a/TP2/docs/presentacion/presentacion.tex
+++ b/TP2/docs/presentacion/presentacion.tex
@@ -25,7 +25,8 @@
     The Hong Kong University of Science and Technology(GZ) \\
 }
 \date{\small \today}
-\usepackage{HKUSTstyle}
+%\usepackage{HKUSTstyle}
+\usepackage{blkarray}
 
 % defs
 \def\cmd#1{\texttt{\color{red}\footnotesize $\backslash$#1}}
@@ -55,7 +56,7 @@
     \vspace*{-0.6cm}
     \begin{figure}[htpb]
         \begin{center}
-            \includegraphics[keepaspectratio, scale=0.02]{pic/UST.png}
+            \includegraphics[keepaspectratio, scale=0.02]{pic/itba.png}
         \end{center}
     \end{figure}
 \end{frame}
@@ -119,7 +120,7 @@ subsubsectionstyle=show/shaded/hide]
 	\frametitle<presentation>{Figures}
 	\begin{figure}
 		\centering
-			\includegraphics[height=5cm]{pic/UST.png}
+			\includegraphics[height=5cm]{pic/itba.png}
 		\caption{Logo of the university.}
 		\label{fig:unilogo}
 	\end{figure}
