--- a/TP2/docs/informe/informe.tex
+++ b/TP2/docs/informe/informe.tex
@@ -3,10 +3,61 @@
 
 % Packages
 \usepackage{amsmath}
+\usepackage{amssymb}
 
 % Document
 \begin{document}
 
+    \tableofcontents
 
 
+    \section{Introduccion}
+    El siguiente trabajo presenta el desarrollo de la implementacion, simulaciones realizadas y analisis de resultados de
+    automatas celulares, en particular el juego de la vida, propuesto por John Horton Conway en 1970, y alteraciones del mismo.
+
+    Con fines de producir diversas simulaciones con el objetivo de detectar comportamientos y patrones, se ha realizado
+    simulaciones tanto en dos y tres dimensiones, modificando a su vez parametros de entrada.
+
+    \section{Modelo}
+
+    \subsection{Automatas celulares}
+
+    Un automata celular modela un sistema dinamico el cual evoluciona en pasos discretos mediantes reglas o heuristicas,
+     las cuales determinan la transicion entre dos estados.
+
+    El sistema se compone de una matriz de celdas que poseen un numero finito de estados discretos y estos se iran actualizando
+    de manera sincronica en cada paso temporal.
+
+    Las reglas se caracterizan por ser deterministicas y uniformes en tiempo y espacio. Es decir, que las reglas para la evolucion
+    de una celda solamente depende de un vecindario. Donde este vecindario sera definido segun la implementacion y las reglas.
+
+    En una transicion de estados, se define un alcance r, el cual determina el grupo de celdas cercanas que son tenidas
+    en cuenta para la regla de transicion. Como es utilizado el valor r varia en funcion de la cantidad de dimensiones de
+    la matriz y como se define el vecindario.
+
+    \subsection{Definiciones de vecindad}
+    Como se ha mencionado, el alcance es un parametro que describe a un sistema en particualar. Sin embargo, debe tambien
+    tenerse en cuenta bajo que definicion de vecindario se trabaja. Se han contemplado los siguietnes.
+
+    En primer lugar el vecindario Von Neumann considera como vecina a aquellas celdas que se encuentran dentro del rango r
+    considerando la distancia Manhattan. De forma mas precisa, el conjunto de vecinas se define de la siguiente manera
+    $N_{i,j}^{vN}:=\{(k,l) \in L\ |\ |k-i|+ |l - j| \leq r\}$
+
+
+    \subsection{Juego de la vida}
+
+
+
+    \section{Implementacion}
+
+
+    \section{Simulaciones}
+
+
+    \section{Resultados}
+
+
+    \section{Conclusiones}
+
+    lhh
 \end{document}
