--- a/TP2/docs/informe/04-simulaciones.tex
+++ b/TP2/docs/informe/04-simulaciones.tex
@@ -22,3 +22,6 @@ Es decir, siendo $A$ el área o volumen total de la matriz, el dominio inicial e
 Por otro lado, los parámetros que se varían a lo largo de las simulaciones son la cantidad de pasos temporales
 máximos ($maxIter$), y la proporción de densidad de celdas vivas en el dominio inicial ($initialLiveCellsProportion$),
 siendo este último un valor entre 0 y 1.
+
+\subsection{Definición de Observables}\label{subsec:observables-posibles}
+
