--- a/TP2/docs/informe/06-conclusiones.tex
+++ b/TP2/docs/informe/06-conclusiones.tex
@@ -1,1 +1,16 @@
 \section{Conclusiones}\label{sec:conclusiones}
+
+\subsection{Conway en 2D}\label{subsec:conway-en-2d-conc}
+
+\subsection{Cuarentena en 2D}\label{subsec:cuarentena-2D-conc}
+
+Si se necesitan más de 3 vecinos existe una imposiblidad de crecer más allá de su rango inicial (más o menos en realidad).
+
+\subsection{Expansión Circular en 2D}\label{subsec:expansion-circular-2D-conc}
+
+Something something para tener un crecimiento constante hacia todos lados no es siempre necesario que todas las celdas revivan por cualquier
+cantidad de vecinos.
+
+\subsection{Expansión Cúbica}\label{subsec:cubito-3D-conc}
+
+Something something si es fácil que se muera con muchos vecinos quizás es mejor tener una densidad baja si se pretende crecer rápidamente.
